--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "author": "Tommy Ziegler <me@tommyziegler.com> (http://www.tommyziegler.com)",
-  "name": "wHomeControlPi",
+  "name": "whomecontrolpi",
   "description": "Wireless Home Control in Node.JS for wiringPi lib on Raspberry Pi",
-    "type": "git",
+  "type": "git",
   "version": "0.0.1",
   "repository": {
     "url": "git://github.com/tommyziegler/wHomeControlPi.git"
   },
-  "main": "wHomeControlPi.js",
+  "main": "whomecontrolpi.js",
   "engines": {
     "node": "0.8"
   },
